Add dedicated endpoint to return relevant table info only
